Update index.html, Redirect to Oliver-Cong02.github.io

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://bbb.github.io">
+    <meta http-equiv="refresh" content="0; url=https://Oliver-Cong02.github.io">
     <title>Redirecting...</title>
 </head>
 <body>
